--- a/index.html
+++ b/index.html
@@ -3,46 +3,253 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Тест Вкладок</title>
+<title>Автосервіс Онлайн</title>
 <style>
+  body {
+    margin:0; padding:0;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    background: #f7f9fc;
+    color: #222;
+  }
+  header {
+    background: #000;
+    color: white;
+    padding: 1rem;
+    font-size: 1.6rem;
+    font-weight: 600;
+    text-align: center;
+  }
+  nav {
+    display: flex;
+    background: white;
+    box-shadow: 0 2px 5px rgb(0 0 0 / 0.1);
+    overflow-x: auto;
+  }
   nav button {
-    cursor: pointer;
-    padding: 10px;
+    flex: 1 0 auto;
     border: none;
-    background: #eee;
-    margin-right: 5px;
+    background: transparent;
+    padding: 0.8rem 1rem;
+    font-weight: 600;
+    font-size: 1rem;
+    cursor: pointer;
+    color: #444;
+    border-bottom: 3px solid transparent;
+    transition: all 0.3s ease;
+    white-space: nowrap;
   }
   nav button.active {
-    background: #000;
-    color: #fff;
+    color: #000;
+    border-bottom: 3px solid #000;
+  }
+  main {
+    padding: 1rem;
+    max-width: 900px;
+    margin: auto;
   }
   section {
     display: none;
-    margin-top: 15px;
   }
   section.active {
     display: block;
+  }
+  form {
+    display: grid;
+    gap: 0.8rem;
+    margin-bottom: 1.5rem;
+  }
+  input, select, textarea {
+    padding: 0.6rem 0.9rem;
+    font-size: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    background: white;
+    color: #222;
+    resize: vertical;
+  }
+  button.submit {
+    background: #000;
+    color: white;
+    font-weight: 700;
+    border: none;
+    padding: 0.7rem 1rem;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    justify-self: start;
+  }
+  button.submit:hover {
+    background: #333;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 0.9rem;
+  }
+  th, td {
+    padding: 0.5rem 0.7rem;
+    border-bottom: 1px solid #eee;
+    text-align: left;
+    vertical-align: middle;
+  }
+  th {
+    background: #f1f5f9;
+    font-weight: 700;
+    color: #555;
+  }
+  td button.delete {
+    background: #e74c3c;
+    color: white;
+    border: none;
+    padding: 0.25rem 0.6rem;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 0.85rem;
+    transition: background-color 0.3s ease;
+  }
+  td button.delete:hover {
+    background: #c0392b;
+  }
+  .actions {
+    margin-bottom: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.7rem;
+  }
+  .actions button {
+    background: #000;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 6px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    flex: 1 0 auto;
+    min-width: 120px;
+  }
+  .actions button:hover {
+    background: #333;
+  }
+  label {
+    font-weight: 600;
+  }
+  @media (max-width: 600px) {
+    nav button {
+      font-size: 0.9rem;
+      padding: 0.6rem 0.8rem;
+    }
+    input, select, textarea {
+      font-size: 1rem;
+    }
+    table {
+      font-size: 0.85rem;
+    }
+    header {
+      font-size: 1.4rem;
+      padding: 1rem 0.5rem;
+    }
+    main {
+      padding: 1rem 0.5rem 2rem 0.5rem;
+    }
+    .actions {
+      flex-direction: column;
+    }
+    .actions button {
+      min-width: 100%;
+    }
   }
 </style>
 </head>
 <body>
 
+<header>Автосервіс Онлайн</header>
+
 <nav>
-  <button class="tab active" data-tab="tab1" type="button">Вкладка 1</button>
-  <button class="tab" data-tab="tab2" type="button">Вкладка 2</button>
+  <button class="tab active" data-tab="clients" type="button">Клієнти</button>
+  <button class="tab" data-tab="cars" type="button">Автомобілі</button>
+  <button class="tab" data-tab="parts" type="button">Запчастини</button>
+  <button class="tab" data-tab="invoices" type="button">Рахунки</button>
+  <button class="tab" data-tab="acts" type="button">Акти</button>
 </nav>
 
-<section id="tab1" class="active">
-  <button id="btn1">Кнопка 1</button>
-</section>
-<section id="tab2">
-  <button id="btn2">Кнопка 2</button>
-</section>
+<main>
+  <section id="clients" class="active" role="tabpanel" aria-label="Клієнти">
+    <form id="clientForm">
+      <input type="text" id="clientName" placeholder="Ім'я клієнта" required autocomplete="off" />
+      <input type="tel" id="clientPhone" placeholder="Телефон" autocomplete="off" />
+      <button type="submit" class="submit">Додати клієнта</button>
+    </form>
+    <table>
+      <thead><tr><th>Ім'я</th><th>Телефон</th><th>Видалити</th></tr></thead>
+      <tbody id="clientList"></tbody>
+    </table>
+  </section>
+
+  <section id="cars" role="tabpanel" aria-label="Автомобілі">
+    <form id="carForm">
+      <input type="text" id="carOwner" placeholder="Власник (клієнт)" required autocomplete="off"/>
+      <input type="text" id="carModel" placeholder="Модель автомобіля" required autocomplete="off"/>
+      <input type="text" id="carVIN" placeholder="VIN (опційно)" autocomplete="off"/>
+      <button type="submit" class="submit">Додати автомобіль</button>
+    </form>
+    <table>
+      <thead><tr><th>Власник</th><th>Модель</th><th>VIN</th><th>Видалити</th></tr></thead>
+      <tbody id="carList"></tbody>
+    </table>
+  </section>
+
+  <section id="parts" role="tabpanel" aria-label="Запчастини">
+    <form id="partForm">
+      <input type="text" id="partName" placeholder="Назва запчастини" required autocomplete="off" />
+      <input type="number" id="partPrice" placeholder="Ціна, грн" required min="0" step="0.01" autocomplete="off" />
+      <button type="submit" class="submit">Додати запчастину</button>
+    </form>
+    <table>
+      <thead><tr><th>Назва</th><th>Ціна, грн</th><th>Видалити</th></tr></thead>
+      <tbody id="partList"></tbody>
+    </table>
+  </section>
+
+  <section id="invoices" role="tabpanel" aria-label="Рахунки">
+    <form id="invoiceForm">
+      <input type="text" id="invoiceClient" placeholder="Клієнт" required autocomplete="off" />
+      <input type="text" id="invoiceCar" placeholder="Автомобіль" required autocomplete="off" />
+      <textarea id="invoiceWork" placeholder="Опис робіт" required></textarea>
+      <input type="number" id="invoiceWorkPrice" placeholder="Вартість робіт, грн" min="0" step="0.01" value="0" autocomplete="off" />
+      <button type="submit" class="submit">Додати рахунок</button>
+    </form>
+    <table>
+      <thead>
+        <tr>
+          <th>Клієнт</th><th>Автомобіль</th><th>Роботи</th><th>Сума, грн</th><th>Видалити</th>
+        </tr>
+      </thead>
+      <tbody id="invoiceList"></tbody>
+    </table>
+  </section>
+
+  <section id="acts" role="tabpanel" aria-label="Акти">
+    <form id="actForm">
+      <input type="text" id="actClient" placeholder="Ім'я клієнта" required autocomplete="off" />
+      <input type="text" id="actCar" placeholder="Авто" required autocomplete="off"/>
+      <textarea id="actWork" placeholder="Опис робіт" required></textarea>
+      <button type="submit" class="submit">Додати акт</button>
+    </form>
+    <table>
+      <thead>
+        <tr><th>Клієнт</th><th>Авто</th><th>Роботи</th><th>Видалити</th></tr>
+      </thead>
+      <tbody id="actList"></tbody>
+    </table>
+  </section>
+</main>
 
 <script>
+document.addEventListener('DOMContentLoaded', function() {
+  // Вкладки
   const tabs = document.querySelectorAll('nav button.tab');
-  const sections = document.querySelectorAll('section');
-
+  const sections = document.querySelectorAll('main section');
   tabs.forEach(tab => {
     tab.addEventListener('click', () => {
       tabs.forEach(t => t.classList.remove('active'));
@@ -52,8 +259,167 @@
     });
   });
 
-  document.getElementById('btn1').addEventListener('click', () => alert('Натиснули кнопку 1'));
-  document.getElementById('btn2').addEventListener('click', () => alert('Натиснули кнопку 2'));
+  // Дані у localStorage
+  let clients = JSON.parse(localStorage.getItem('clients') || '[]');
+  let cars = JSON.parse(localStorage.getItem('cars') || '[]');
+  let parts = JSON.parse(localStorage.getItem('parts') || '[]');
+  let invoices = JSON.parse(localStorage.getItem('invoices') || '[]');
+  let acts = JSON.parse(localStorage.getItem('acts') || '[]');
+
+  // Рендер функції
+  function renderClients(){
+    const tbody = document.getElementById('clientList');
+    tbody.innerHTML = '';
+    clients.forEach((c,i) => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${c.name}</td><td>${c.phone || ''}</td><td><button data-type="client" data-index="${i}" class="delete">×</button></td>`;
+      tbody.appendChild(tr);
+    });
+  }
+  function renderCars(){
+    const tbody = document.getElementById('carList');
+    tbody.innerHTML = '';
+    cars.forEach((c,i) => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${c.owner}</td><td>${c.model}</td><td>${c.vin || ''}</td><td><button data-type="car" data-index="${i}" class="delete">×</button></td>`;
+      tbody.appendChild(tr);
+    });
+  }
+  function renderParts(){
+    const tbody = document.getElementById('partList');
+    tbody.innerHTML = '';
+    parts.forEach((p,i) => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${p.name}</td><td>${p.price.toFixed(2)}</td><td><button data-type="part" data-index="${i}" class="delete">×</button></td>`;
+      tbody.appendChild(tr);
+    });
+  }
+  function renderInvoices(){
+    const tbody = document.getElementById('invoiceList');
+    tbody.innerHTML = '';
+    invoices.forEach((inv,i) => {
+      const sum = (parseFloat(inv.workPrice) || 0);
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${inv.client}</td><td>${inv.car}</td><td>${inv.work}</td><td>${sum.toFixed(2)}</td><td><button data-type="invoice" data-index="${i}" class="delete">×</button></td>`;
+      tbody.appendChild(tr);
+    });
+  }
+  function renderActs(){
+    const tbody = document.getElementById('actList');
+    tbody.innerHTML = '';
+    acts.forEach((act,i) => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${act.client}</td><td>${act.car}</td><td>${act.work}</td><td><button data-type="act" data-index="${i}" class="delete">×</button></td>`;
+      tbody.appendChild(tr);
+    });
+  }
+
+  // Початковий рендер
+  renderClients();
+  renderCars();
+  renderParts();
+  renderInvoices();
+  renderActs();
+
+  // Додавання клієнта
+  document.getElementById('clientForm').addEventListener('submit', e => {
+    e.preventDefault();
+    const name = document.getElementById('clientName').value.trim();
+    const phone = document.getElementById('clientPhone').value.trim();
+    if(!name) return alert('Вкажіть ім\'я клієнта');
+    clients.push({name, phone});
+    localStorage.setItem('clients', JSON.stringify(clients));
+    renderClients();
+    e.target.reset();
+  });
+
+  // Додавання авто
+  document.getElementById('carForm').addEventListener('submit', e => {
+    e.preventDefault();
+    const owner = document.getElementById('carOwner').value.trim();
+    const model = document.getElementById('carModel').value.trim();
+    const vin = document.getElementById('carVIN').value.trim();
+    if(!owner || !model) return alert('Вкажіть власника і модель авто');
+    cars.push({owner, model, vin});
+    localStorage.setItem('cars', JSON.stringify(cars));
+    renderCars();
+    e.target.reset();
+  });
+
+  // Додавання запчастин
+  document.getElementById('partForm').addEventListener('submit', e => {
+    e.preventDefault();
+    const name = document.getElementById('partName').value.trim();
+    const price = parseFloat(document.getElementById('partPrice').value);
+    if(!name || isNaN(price)) return alert('Вкажіть назву і ціну запчастини');
+    parts.push({name, price});
+    localStorage.setItem('parts', JSON.stringify(parts));
+    renderParts();
+    e.target.reset();
+  });
+
+  // Додавання рахунку
+  document.getElementById('invoiceForm').addEventListener('submit', e => {
+    e.preventDefault();
+    const client = document.getElementById('invoiceClient').value.trim();
+    const car = document.getElementById('invoiceCar').value.trim();
+    const work = document.getElementById('invoiceWork').value.trim();
+    const workPrice = parseFloat(document.getElementById('invoiceWorkPrice').value) || 0;
+    if(!client || !car || !work) return alert('Вкажіть клієнта, автомобіль та опис робіт');
+    invoices.push({client, car, work, workPrice});
+    localStorage.setItem('invoices', JSON.stringify(invoices));
+    renderInvoices();
+    e.target.reset();
+  });
+
+  // Додавання акту
+  document.getElementById('actForm').addEventListener('submit', e => {
+    e.preventDefault();
+    const client = document.getElementById('actClient').value.trim();
+    const car = document.getElementById('actCar').value.trim();
+    const work = document.getElementById('actWork').value.trim();
+    if(!client || !car || !work) return alert('Вкажіть клієнта, авто та опис робіт');
+    acts.push({client, car, work});
+    localStorage.setItem('acts', JSON.stringify(acts));
+    renderActs();
+    e.target.reset();
+  });
+
+  // Видалення елементів
+  document.body.addEventListener('click', e => {
+    if(e.target.classList.contains('delete')) {
+      const type = e.target.dataset.type;
+      const index = +e.target.dataset.index;
+      if(type && !isNaN(index)) {
+        if(type === 'client') {
+          clients.splice(index, 1);
+          localStorage.setItem('clients', JSON.stringify(clients));
+          renderClients();
+        }
+        else if(type === 'car') {
+          cars.splice(index, 1);
+          localStorage.setItem('cars', JSON.stringify(cars));
+          renderCars();
+        }
+        else if(type === 'part') {
+          parts.splice(index, 1);
+          localStorage.setItem('parts', JSON.stringify(parts));
+          renderParts();
+        }
+        else if(type === 'invoice') {
+          invoices.splice(index, 1);
+          localStorage.setItem('invoices', JSON.stringify(invoices));
+          renderInvoices();
+        }
+        else if(type === 'act') {
+          acts.splice(index, 1);
+          localStorage.setItem('acts', JSON.stringify(acts));
+          renderActs();
+        }
+      }
+    }
+  });
+});
 </script>
 
 </body>
