--- a/index.html
+++ b/index.html
@@ -3,390 +3,58 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Автосервіс Онлайн</title>
+<title>Крипто-бот аналітика</title>
 <style>
-  body {
-    margin:0; padding:0;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background: #f7f9fc;
-    color: #222;
-  }
-  header {
-    background: #000;
-    color: white;
-    padding: 1rem;
-    font-size: 1.6rem;
-    font-weight: 600;
-    text-align: center;
-  }
-  nav {
-    display: flex;
-    background: white;
-    box-shadow: 0 2px 5px rgb(0 0 0 / 0.1);
-    overflow-x: auto;
-  }
-  nav button {
-    flex: 1 0 auto;
-    border: none;
-    background: transparent;
-    padding: 0.8rem 1rem;
-    font-weight: 600;
-    font-size: 1rem;
-    cursor: pointer;
-    color: #444;
-    border-bottom: 3px solid transparent;
-    transition: all 0.3s ease;
-    white-space: nowrap;
-  }
-  nav button.active {
-    color: #000;
-    border-bottom: 3px solid #000;
-  }
-  main {
-    padding: 1rem;
-    max-width: 900px;
-    margin: auto;
-  }
-  section {
-    display: none;
-  }
-  section.active {
-    display: block;
-  }
-  form {
-    display: grid;
-    gap: 0.8rem;
-    margin-bottom: 1.5rem;
-  }
-  input, select, textarea {
-    padding: 0.6rem 0.9rem;
-    font-size: 1rem;
-    border: 1px solid #ddd;
-    border-radius: 6px;
-    background: white;
-    color: #222;
-    resize: vertical;
-  }
-  select[multiple] {
-    height: 7rem;
-  }
-  button.submit {
-    background: #000;
-    color: white;
-    font-weight: 700;
-    border: none;
-    padding: 0.7rem 1rem;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    justify-self: start;
-  }
-  button.submit:hover {
-    background: #333;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    font-size: 0.9rem;
-  }
-  th, td {
-    padding: 0.5rem 0.7rem;
-    border-bottom: 1px solid #eee;
-    text-align: left;
-    vertical-align: middle;
-  }
-  th {
-    background: #f1f5f9;
-    font-weight: 700;
-    color: #555;
-  }
-  td button.delete {
-    background: #e74c3c;
-    color: white;
-    border: none;
-    padding: 0.25rem 0.6rem;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 0.85rem;
-    transition: background-color 0.3s ease;
-  }
-  td button.delete:hover {
-    background: #c0392b;
-  }
-  td button.pdf-btn {
-    background: #28a745;
-    color: white;
-    border: none;
-    padding: 0.25rem 0.6rem;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 0.85rem;
-    margin-right: 0.3rem;
-    transition: background-color 0.3s ease;
-  }
-  td button.pdf-btn:hover {
-    background: #1e7e34;
-  }
-  .actions {
-    margin-bottom: 1.5rem;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.7rem;
-  }
-  .actions button {
-    background: #000;
-    color: white;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 6px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    flex: 1 0 auto;
-    min-width: 120px;
-  }
-  .actions button:hover {
-    background: #333;
-  }
-  label {
-    font-weight: 600;
-  }
-  @media (max-width: 600px) {
-    nav button {
-      font-size: 0.9rem;
-      padding: 0.6rem 0.8rem;
-    }
-    input, select, textarea {
-      font-size: 1rem;
-    }
-    table {
-      font-size: 0.85rem;
-    }
-    header {
-      font-size: 1.4rem;
-      padding: 1rem 0.5rem;
-    }
-    main {
-      padding: 1rem 0.5rem 2rem 0.5rem;
-    }
-    .actions {
-      flex-direction: column;
-    }
-    .actions button {
-      min-width: 100%;
-    }
-  }
+  body { font-family: Arial, sans-serif; max-width: 400px; margin: 30px auto; text-align: center; }
+  h1 { margin-bottom: 20px; }
+  #price { font-size: 2em; margin: 20px 0; }
+  #signal { font-weight: bold; font-size: 1.5em; }
+  button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
 </style>
 </head>
 <body>
 
-<header>Автосервіс Онлайн</header>
+<h1>Крипто-бот аналітика</h1>
 
-<nav>
-  <button class="tab active" data-tab="clients" type="button">Клієнти</button>
-  <button class="tab" data-tab="cars" type="button">Автомобілі</button>
-  <button class="tab" data-tab="parts" type="button">Запчастини</button>
-  <button class="tab" data-tab="invoices" type="button">Рахунки</button>
-  <button class="tab" data-tab="acts" type="button">Акти</button>
-</nav>
+<div>Поточна ціна BTC:</div>
+<div id="price">Завантаження...</div>
+<div id="signal">Чекаємо на дані...</div>
 
-<main>
-  <section id="clients" class="active" role="tabpanel" aria-label="Клієнти">
-    <div class="actions">
-      <button id="importClientsBtn" type="button">Імпорт клієнтів</button>
-      <button id="exportClientsBtn" type="button">Експорт клієнтів</button>
-    </div>
-    <form id="clientForm">
-      <input type="text" id="clientName" placeholder="Ім'я клієнта" required autocomplete="off" />
-      <input type="tel" id="clientPhone" placeholder="Телефон" autocomplete="off" />
-      <button type="submit" class="submit">Додати клієнта</button>
-    </form>
-    <table>
-      <thead><tr><th>Ім'я</th><th>Телефон</th><th>Видалити</th></tr></thead>
-      <tbody id="clientList"></tbody>
-    </table>
-  </section>
-
-  <section id="cars" role="tabpanel" aria-label="Автомобілі">
-    <div class="actions">
-      <button id="importCarsBtn" type="button">Імпорт авто</button>
-      <button id="exportCarsBtn" type="button">Експорт авто</button>
-    </div>
-    <form id="carForm">
-      <input type="text" id="carOwner" placeholder="Власник (клієнт)" required autocomplete="off" list="clientNames" />
-      <input type="text" id="carModel" placeholder="Модель автомобіля" required autocomplete="off"/>
-      <input type="text" id="carVIN" placeholder="VIN (опційно)" autocomplete="off"/>
-      <button type="submit" class="submit">Додати автомобіль</button>
-    </form>
-    <datalist id="clientNames"></datalist>
-    <table>
-      <thead><tr><th>Власник</th><th>Модель</th><th>VIN</th><th>Видалити</th></tr></thead>
-      <tbody id="carList"></tbody>
-    </table>
-  </section>
-
-  <section id="parts" role="tabpanel" aria-label="Запчастини">
-    <div class="actions">
-      <button id="importPartsBtn" type="button">Імпорт запчастин</button>
-      <button id="exportPartsBtn" type="button">Експорт запчастин</button>
-    </div>
-    <form id="partForm">
-      <input type="text" id="partName" placeholder="Назва запчастини" required autocomplete="off" />
-      <input type="number" id="partPrice" placeholder="Ціна, грн" required min="0" step="0.01" autocomplete="off" />
-      <button type="submit" class="submit">Додати запчастину</button>
-    </form>
-    <table>
-      <thead><tr><th>Назва</th><th>Ціна, грн</th><th>Видалити</th></tr></thead>
-      <tbody id="partList"></tbody>
-    </table>
-  </section>
-
-  <section id="invoices" role="tabpanel" aria-label="Рахунки">
-    <div class="actions">
-      <button id="importInvoicesBtn" type="button">Імпорт рахунків</button>
-      <button id="exportInvoicesBtn" type="button">Експорт рахунків</button>
-    </div>
-    <form id="invoiceForm">
-      <label for="invoiceClient">Клієнт</label>
-      <input type="text" id="invoiceClient" required autocomplete="off" list="clientNames" />
-      <label for="invoiceCar">Автомобіль</label>
-      <select id="invoiceCar" required></select>
-      <label for="invoiceParts">Запчастини (утримуй Ctrl/Cmd для вибору кількох)</label>
-      <select id="invoiceParts" multiple></select>
-      <label for="invoiceWork">Роботи</label>
-      <textarea id="invoiceWork" placeholder="Опис робіт" required></textarea>
-      <label for="invoiceWorkPrice">Вартість робіт, грн</label>
-      <input type="number" id="invoiceWorkPrice" min="0" step="0.01" value="0" autocomplete="off" />
-      <button type="submit" class="submit">Додати рахунок</button>
-    </form>
-    <table>
-      <thead>
-        <tr>
-          <th>Клієнт</th><th>Автомобіль</th><th>Запчастини</th><th>Роботи</th><th>Сума, грн</th><th>PDF</th><th>Видалити</th>
-        </tr>
-      </thead>
-      <tbody id="invoiceList"></tbody>
-    </table>
-  </section>
-
-  <section id="acts" role="tabpanel" aria-label="Акти">
-    <div class="actions">
-      <button id="importActsBtn" type="button">Імпорт актів</button>
-      <button id="exportActsBtn" type="button">Експорт актів</button>
-    </div>
-    <form id="actForm">
-      <input type="text" id="actClient" placeholder="Ім'я клієнта" required autocomplete="off" list="clientNames" />
-      <input type="text" id="actCar" placeholder="Авто" required autocomplete="off"/>
-      <textarea id="actWork" placeholder="Опис робіт" required></textarea>
-      <button type="submit" class="submit">Додати акт</button>
-    </form>
-    <table>
-      <thead>
-        <tr><th>Клієнт</th><th>Авто</th><th>Роботи</th><th>PDF</th><th>Видалити</th></tr>
-      </thead>
-      <tbody id="actList"></tbody>
-    </table>
-  </section>
-</main>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+<button onclick="fetchPrice()">Оновити</button>
 
 <script>
-  const { jsPDF } = window.jspdf;
+  async function fetchPrice() {
+    const priceEl = document.getElementById('price');
+    const signalEl = document.getElementById('signal');
+    priceEl.textContent = 'Завантаження...';
+    signalEl.textContent = '...';
 
-  const tabs = document.querySelectorAll('nav button.tab');
-  const sections = document.querySelectorAll('main section');
+    try {
+      const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
+      const data = await response.json();
+      const price = data.bitcoin.usd;
+      priceEl.textContent = `$${price.toLocaleString()}`;
 
-  tabs.forEach(tab => {
-    tab.addEventListener('click', () => {
-      tabs.forEach(t => t.classList.remove('active'));
-      tab.classList.add('active');
-      sections.forEach(s => s.classList.remove('active'));
-      document.getElementById(tab.dataset.tab).classList.add('active');
-    });
-  });
-
-  let clients = JSON.parse(localStorage.getItem('clients') || '[]');
-  let cars = JSON.parse(localStorage.getItem('cars') || '[]');
-  let parts = JSON.parse(localStorage.getItem('parts') || '[]');
-  let invoices = JSON.parse(localStorage.getItem('invoices') || '[]');
-  let acts = JSON.parse(localStorage.getItem('acts') || '[]');
-
-  function updateClientDatalist() {
-    const datalist = document.getElementById('clientNames');
-    datalist.innerHTML = '';
-    clients.forEach(c => {
-      const option = document.createElement('option');
-      option.value = c.name;
-      datalist.appendChild(option);
-    });
+      // Проста логіка рекомендації (поріг можна змінити)
+      if (price < 20000) {
+        signalEl.textContent = 'Рекомендація: Купувати (ціна низька)';
+        signalEl.style.color = 'green';
+      } else if (price > 40000) {
+        signalEl.textContent = 'Рекомендація: Продавати (ціна висока)';
+        signalEl.style.color = 'red';
+      } else {
+        signalEl.textContent = 'Рекомендація: Тримати (очікуємо змін)';
+        signalEl.style.color = 'orange';
+      }
+    } catch (error) {
+      priceEl.textContent = 'Помилка завантаження даних';
+      signalEl.textContent = '';
+    }
   }
 
-  function renderClients() {
-    const tbody = document.getElementById('clientList');
-    tbody.innerHTML = '';
-    clients.forEach((c, i) => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `<td>${c.name}</td><td>${c.phone || ''}</td><td><button data-type="client" data-index="${i}" class="delete">×</button></td>`;
-      tbody.appendChild(tr);
-    });
-    updateClientDatalist();
-  }
+  // Завантажити ціну при відкритті сторінки
+  fetchPrice();
+</script>
 
-  function renderCars() {
-    const tbody = document.getElementById('carList');
-    tbody.innerHTML = '';
-    cars.forEach((c, i) => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `<td>${c.owner}</td><td>${c.model}</td><td>${c.vin || ''}</td><td><button data-type="car" data-index="${i}" class="delete">×</button></td>`;
-      tbody.appendChild(tr);
-    });
-
-    // Оновлюємо select авто для рахунків
-    const sel = document.getElementById('invoiceCar');
-    sel.innerHTML = '';
-    cars.forEach((c, i) => {
-      const option = document.createElement('option');
-      option.value = i;
-      option.textContent = `${c.model} (власник: ${c.owner})`;
-      sel.appendChild(option);
-    });
-  }
-
-  function renderParts() {
-    const tbody = document.getElementById('partList');
-    tbody.innerHTML = '';
-    parts.forEach((p, i) => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `<td>${p.name}</td><td>${p.price.toFixed(2)}</td><td><button data-type="part" data-index="${i}" class="delete">×</button></td>`;
-      tbody.appendChild(tr);
-    });
-
-    // Оновлюємо select запчастин для рахунків
-    const sel = document.getElementById('invoiceParts');
-    sel.innerHTML = '';
-    parts.forEach((p, i) => {
-      const option = document.createElement('option');
-      option.value = i;
-      option.textContent = `${p.name} — ${p.price.toFixed(2)} грн`;
-      sel.appendChild(option);
-    });
-  }
-
-  function renderInvoices() {
-    const tbody = document.getElementById('invoiceList');
-    tbody.innerHTML = '';
-    invoices.forEach((inv, i) => {
-      const selectedParts = inv.parts.map(idx => parts[idx]?.name || '').filter(n => n).join(', ');
-      const partsSum = inv.parts.reduce((sum, idx) => sum + (parts[idx]?.price || 0), 0);
-      const workPrice = parseFloat(inv.workPrice) || 0;
-      const totalPrice = partsSum + workPrice;
-      const tr = document.createElement('tr');
-      tr.innerHTML = `
-        <td>${inv.client}</td>
-        <td>${cars[inv.car]?.model || ''}</td>
-        <td>${selectedParts}</td>
-        <td>${inv.work}</td>
-        <td>${totalPrice.toFixed(2)}</td>
-        <td><button class="pdf-btn" data-index="${
+</body>
+</html>
